--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "maxcover",
+  "name": "max-cover",
   "version": "0.0.0",
   "description": "Site and badge system to display true value of testing in your project",
   "main": "index.js",
